# test_lab

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build-library.yml
include/: MyLibrary.h
src/: MyLibrary.cpp
tests/: test_library.cpp
